--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html, body {
-  background-color: #00FF00; /* ירוק בסיסי שצובע את הסטטוס בר */
+  background-color: #b4e8b4; /* ירוק בסיסי שצובע את הסטטוס בר */
 }
 
 
